--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
             <button class="hard button3" onclick="init(8,12)">25</button>
             <button class="extreme button3" onclick="init(12,30)">36</button>
         </div>
-        <h2 class="timer">000</h2>
+        <div class="stats-row">
+            <h2 class="lives"></h2>
+            <h1 class="smile"></h1>
+            <h2 class="timer">000</h2>
+        </div>
         <div class="board-container"></div>
 
     </div>
